--- a/CadastroUsuario.csproj
+++ b/CadastroUsuario.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Interfaces\ILogAcessRepository.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Models\LogAccessModel.cs" />
+    <Compile Include="Models\TableViewModels\UserTableViewModel.cs" />
     <Compile Include="Models\UsuarioModel.cs" />
     <Compile Include="Models\ViewModels\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
